Fix: word-wrap in information section

--- a/sass/_information.sass
+++ b/sass/_information.sass
@@ -29,3 +29,4 @@
     font-size: 18px
     line-height: 29px
     color: $dark-secondary
+    word-break: break-word
